--- a/public/publication/conference-paper/cite.bib
+++ b/public/publication/conference-paper/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{example1,
   title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
+  author={Nelson Bighetti and Robert Ford},
   booktitle={Source Themes Conference},
   pages={1--6},
   year={2013},
