underline on my name

--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -1,28 +1,28 @@
 @InProceedings{wang2025soundboost,
   title={{SOUNDBOOST: Effective RCA and Attack Detection for UAV via Acoustic Side-Channel}},
   author={Haoran Wang and Zheng Yang and Sangdon Park and Yibin Yang and Seulbae Kim and Willian Lunardi and Martin Andreoni and Taesoo Kim and Wenke Lee},
-  booktitle={Proceedings of the 55th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (\textbf{DSN})},
+  booktitle={Proceedings of the 55th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)},
   year={2025}
 }
 
 @InProceedings{lee2024selective,
   title={{Selective Generation for Controllable Language Models}},
   author={Minjae Lee and Kyungmin Kim and Taesoo Kim and Sangdon Park},
-  booktitle={Neural Information Processing Systems (\textbf{NeurIPS})},
+  booktitle={Neural Information Processing Systems (NeurIPS)},
   year={2024}
 }
 
 @InProceedings{li2024shuo,
   title={{TRAQ: Trustworthy Retrieval Augmented Question Answering via Conformal Prediction}},
   author={Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
-  booktitle={Annual Conference of the North American Chapter of the Association for Computational Linguistics (\textbf{NAACL})},
+  booktitle={Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)},
   year={2024}
 }
 
 @InProceedings{park2024medbn,
   title={{MedBN: Robust Test Time Adaptation against Malicious Test Samples}},
   author={Hyejin Park and Jeongyeon Hwang and Sunung Mun and Sangdon Park and Jungseul Ok},
-  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (\textbf{CVPR})},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
   year={2024}
 }
 
@@ -31,7 +31,7 @@
 si2024pac,
 title={{PAC} Prediction Sets Under Label Shift},
 author={Wenwen Si and Sangdon Park and Insup Lee and Edgar Dobriban and Osbert Bastani},
-booktitle={The Twelfth International Conference on Learning Representations (\textbf{ICLR})},
+booktitle={The Twelfth International Conference on Learning Representations (ICLR)},
 year={2024},
 url={https://openreview.net/forum?id=4vPVBh3fhz}
 }
@@ -39,7 +39,7 @@ url={https://openreview.net/forum?id=4vPVBh3fhz}
 @InProceedings{wenwen2023angelic,
   title={{Angelic Patches for Improving Third-Party Object Detector Performance}},
   author={Wenwen Si and Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
-  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (\textbf{CVPR})},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
   year={2023}
 }
 
@@ -49,7 +49,7 @@ url={https://openreview.net/forum?id=4vPVBh3fhz}
   author={Sangdon Park and Osbert Bastani and Taesoo Kim},
   url = {https://arxiv.org/abs/2211.09330},
   howpublishe={\url{https://arxiv.org/abs/2211.09330}},
-  booktitle={Proceedings of the 32nd USENIX Security Symposium (\textbf{Security})},
+  booktitle={Proceedings of the 32nd USENIX Security Symposium (Security)},
   year={2023}
 }
 
@@ -57,7 +57,7 @@ url={https://openreview.net/forum?id=4vPVBh3fhz}
   title={{CODiT}: Conformal Out-of-Distribution Detection in Time-Series  Data for Cyber-Physical Systems},
   author={Ramneet Kaur and Kaustubh Sridhar and Sangdon Park and Yahan Yang and Susmit Jha and Anirban Roy and Oleg Sokolsky and Insup Lee},
   booktitle={Proceedings of the 14Th ACM/IEEE International Conference on
-Cyber-Physical Systems (\textbf{ICCPS})},
+Cyber-Physical Systems (ICCPS)},
   year={2023}
 }
 
@@ -73,7 +73,7 @@ Cyber-Physical Systems (\textbf{ICCPS})},
 @InProceedings{park2022pac,
   title={{PAC Prediction Sets for Meta-Learning}},
   author={Park, Sangdon and Dobriban, Edgar and Lee, Insup and Bastani, Osbert},
-  booktitle={Neural Information Processing Systems (\textbf{NeurIPS})},
+  booktitle={Neural Information Processing Systems (NeurIPS)},
   year={2022}
 }
 
@@ -89,7 +89,7 @@ Cyber-Physical Systems (\textbf{ICCPS})},
 @InProceedings{jang2021covshift,
   title = 	 {Sequential Covariate Shift Detection Using Classifier Two-Sample Tests},
   author =       {Jang, Sooyong and Park, Sangdon and Lee, Insup and Bastani, Osbert},
-  booktitle = 	 {Proceedings of the 39th International Conference on Machine Learning (\textbf{ICML})},
+  booktitle = 	 {Proceedings of the 39th International Conference on Machine Learning (ICML)},
   %pages = 	 {9845--9880},
   year = 	 {2022},
   %editor = 	 {Chaudhuri, Kamalika and Jegelka, Stefanie and Song, Le and Szepesvari, Csaba and Niu, Gang and Sabato, Sivan},
@@ -106,10 +106,11 @@ Cyber-Physical Systems (\textbf{ICCPS})},
 park2022pac,
 title={{PAC} Prediction Sets Under Covariate Shift},
 author={Sangdon Park and Edgar Dobriban and Insup Lee and Osbert Bastani},
-booktitle={International Conference on Learning Representations (\textbf{ICLR})} ,
+booktitle={International Conference on Learning Representations (ICLR)} ,
 year={2022},
 url={https://openreview.net/forum?id=DhP9L8vIyLc}
 }
+
 % @article{zhang2021robust,
 %   title={Robust Deep Learning via Robust Representation Design},
 %   author={Jian Zhang and Shuo Li and Park, Sangdon and Lee, Insup and Osbert Bastani},
@@ -122,7 +123,7 @@ Kaur2021idecode,
 title={{iDECODe}: In-distribution Equivariance for Conformal Out-of-distribution Detection},
 author={
 Ramneet Kaur and Susmit Jha and Anirban Roy and Sangdon Park and Edgar Dobriban and Oleg Sokolsky and Insup Lee},
-booktitle={Association for the Advancement of Artificial Intelligence (\textbf{AAAI})},
+booktitle={Association for the Advancement of Artificial Intelligence (AAAI)},
 year={2021},
 }
 
@@ -130,7 +131,7 @@ year={2021},
 park2021pac,
 title={{PAC} Confidence Predictions for Deep Neural Network Classifiers},
 author={Sangdon Park and Shuo Li and Insup Lee and Osbert Bastani},
-booktitle={International Conference on Learning Representations (\textbf{ICLR})},
+booktitle={International Conference on Learning Representations (ICLR)},
 year={2021},
 url={https://openreview.net/forum?id=Qk-Wq5AIjpq}
 }
@@ -138,7 +139,7 @@ url={https://openreview.net/forum?id=Qk-Wq5AIjpq}
 @inproceedings{park2020calibrated,
   title={Calibrated prediction with covariate shift via unsupervised domain adaptation},
   author={Park, Sangdon and Bastani, Osbert and Weimer, James and Lee, Insup},
-  booktitle={International Conference on Artificial Intelligence and Statistics (\textbf{AISTATS})},
+  booktitle={International Conference on Artificial Intelligence and Statistics (AISTATS)},
   %pages={3219--3229},
   year={2020},
   %organization={PMLR}
@@ -148,7 +149,7 @@ url={https://openreview.net/forum?id=Qk-Wq5AIjpq}
 Park2020PAC,
 title={{PAC} Confidence Sets for Deep Neural Networks via Calibrated Prediction},
 author={Sangdon Park and Osbert Bastani and Nikolai Matni and Insup Lee},
-booktitle={International Conference on Learning Representations (\textbf{ICLR})},
+booktitle={International Conference on Learning Representations (ICLR)},
 year={2020},
 url={https://openreview.net/forum?id=BJxVI04YvB}
 }
@@ -164,7 +165,7 @@ url={https://openreview.net/forum?id=BJxVI04YvB}
 @inproceedings{park2017resilient,
   title={Resilient linear classification: an approach to deal with attacks on training data},
   author={Park, Sangdon and Weimer, James and Lee, Insup},
-  booktitle={International Conference on Cyber-Physical Systems (\textbf{ICCPS})},
+  booktitle={International Conference on Cyber-Physical Systems (ICCPS)},
   %pages={155--164},
   year={2017}
 }
@@ -172,7 +173,7 @@ url={https://openreview.net/forum?id=BJxVI04YvB}
 @inproceedings{oh2016integrated,
   title={Integrated intelligence for human-robot teams},
   author={Oh, Jean and Howard, Thomas M and Walter, Matthew R and Barber, Daniel and Zhu, Menglong and Park, Sangdon and Suppe, Arne and Navarro-Serment, Luis and Duvallet, Felix and Boularias, Abdeslam and others},
-  booktitle={International Symposium on Experimental Robotics (\textbf{ISER})},
+  booktitle={International Symposium on Experimental Robotics (ISER)},
   %pages={309--322},
   year={2016},
   %organization={Springer}
