--- a/content/publication/kaur-2023-codit/cite.bib
+++ b/content/publication/kaur-2023-codit/cite.bib
@@ -1,7 +1,7 @@
 @inproceedings{kaur2023codit,
  author = {Ramneet Kaur and Kaustubh Sridhar and Sangdon Park and Yahan Yang and Susmit Jha and Anirban Roy and Oleg Sokolsky and Insup Lee},
  booktitle = {Proceedings of the 14Th ACM/IEEE International Conference on
-Cyber-Physical Systems (\textbfICCPS)},
+Cyber-Physical Systems (ICCPS)},
  title = {CODiT: Conformal Out-of-Distribution Detection in Time-Series  Data for Cyber-Physical Systems},
  year = {2023}
 }
