--- a/content/publication/lee-2024-selective/cite.bib
+++ b/content/publication/lee-2024-selective/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{lee2024selective,
  author = {Minjae Lee and Kyungmin Kim and Taesoo Kim and Sangdon Park},
- booktitle = {Neural Information Processing Systems (\textbfNeurIPS)},
+ booktitle = {Neural Information Processing Systems (NeurIPS)},
  title = {Selective Generation for Controllable Language Models},
  year = {2024}
 }
