--- a/content/publication/si-2024-pac/cite.bib
+++ b/content/publication/si-2024-pac/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{si2024pac,
  author = {Wenwen Si and Sangdon Park and Insup Lee and Edgar Dobriban and Osbert Bastani},
- booktitle = {The Twelfth International Conference on Learning Representations (\textbfICLR)},
+ booktitle = {The Twelfth International Conference on Learning Representations (ICLR)},
  title = {PAC Prediction Sets Under Label Shift},
  url = {https://openreview.net/forum?id=4vPVBh3fhz},
  year = {2024}
