--- a/content/publication/kaur-2021-idecode/cite.bib
+++ b/content/publication/kaur-2021-idecode/cite.bib
@@ -1,7 +1,7 @@
 @inproceedings{Kaur2021idecode,
  author = {
 Ramneet Kaur and Susmit Jha and Anirban Roy and Sangdon Park and Edgar Dobriban and Oleg Sokolsky and Insup Lee},
- booktitle = {Association for the Advancement of Artificial Intelligence (\textbfAAAI)},
+ booktitle = {Association for the Advancement of Artificial Intelligence (AAAI)},
  title = {iDECODe: In-distribution Equivariance for Conformal Out-of-distribution Detection},
  year = {2021}
 }
