--- a/content/publication/li-2024-shuo/cite.bib
+++ b/content/publication/li-2024-shuo/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{li2024shuo,
  author = {Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
- booktitle = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (\textbfNAACL)},
+ booktitle = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)},
  title = {TRAQ: Trustworthy Retrieval Augmented Question Answering via Conformal Prediction},
  year = {2024}
 }
