--- a/content/publication/park-2020-pac/cite.bib
+++ b/content/publication/park-2020-pac/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{Park2020PAC,
  author = {Sangdon Park and Osbert Bastani and Nikolai Matni and Insup Lee},
- booktitle = {International Conference on Learning Representations (\textbfICLR)},
+ booktitle = {International Conference on Learning Representations (ICLR)},
  title = {PAC Confidence Sets for Deep Neural Networks via Calibrated Prediction},
  url = {https://openreview.net/forum?id=BJxVI04YvB},
  year = {2020}
