--- a/content/publication/park-2021-pac/cite.bib
+++ b/content/publication/park-2021-pac/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{park2021pac,
  author = {Sangdon Park and Shuo Li and Insup Lee and Osbert Bastani},
- booktitle = {International Conference on Learning Representations (\textbfICLR)},
+ booktitle = {International Conference on Learning Representations (ICLR)},
  title = {PAC Confidence Predictions for Deep Neural Network Classifiers},
  url = {https://openreview.net/forum?id=Qk-Wq5AIjpq},
  year = {2021}
