--- a/content/publication/park-2022-pac/cite.bib
+++ b/content/publication/park-2022-pac/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{park2022pac,
  author = {Sangdon Park and Edgar Dobriban and Insup Lee and Osbert Bastani},
- booktitle = {International Conference on Learning Representations (\textbfICLR)},
+ booktitle = {International Conference on Learning Representations (ICLR)},
  title = {PAC Prediction Sets Under Covariate Shift},
  url = {https://openreview.net/forum?id=DhP9L8vIyLc},
  year = {2022}
