--- a/content/publication/park-2023-conformal/cite.bib
+++ b/content/publication/park-2023-conformal/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{park2023conformal,
  author = {Sangdon Park and Osbert Bastani and Taesoo Kim},
- booktitle = {Proceedings of the 32nd USENIX Security Symposium (\textbfSecurity)},
+ booktitle = {Proceedings of the 32nd USENIX Security Symposium (Security)},
  howpublishe = {r̆lhttps://arxiv.org/abs/2211.09330},
  title = {ACon$^2$: Adaptive Conformal Consensus  for Provable Blockchain Oracles},
  url = {https://arxiv.org/abs/2211.09330},
