--- a/content/publication/park-2024-medbn/cite.bib
+++ b/content/publication/park-2024-medbn/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{park2024medbn,
  author = {Hyejin Park and Jeongyeon Hwang and Sunung Mun and Sangdon Park and Jungseul Ok},
- booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (\textbfCVPR)},
+ booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
  title = {MedBN: Robust Test Time Adaptation against Malicious Test Samples},
  year = {2024}
 }
