--- a/content/publication/wenwen-2023-angelic/cite.bib
+++ b/content/publication/wenwen-2023-angelic/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{wenwen2023angelic,
  author = {Wenwen Si and Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
- booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (\textbfCVPR)},
+ booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
  title = {Angelic Patches for Improving Third-Party Object Detector Performance},
  year = {2023}
 }
