publication almost done

--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -1,189 +1,257 @@
+@InProceedings{moon2025holisticunlearningbenchmarkmultifaceted,
+    title={Holistic Unlearning Benchmark: A Multi-Faceted Evaluation for Text-to-Image Diffusion Model Unlearning},
+    author={Saemi Moon and Minjong Lee and Sangdon Park and Dongwoo Kim},
+
+    booktitle = {International Conference on Computer Vision},
+    keywords = {ICCV},
+    year = {2025},
+    month={October},
+    url={https://arxiv.org/abs/2410.05664},
+}
+
+
+@misc{lee2025regretperspectiveonlineselective,
+    title={A Regret Perspective on Online Selective Generation},
+    author={Minjae Lee and Yoonjae Jung and Sangdon Park},
+    year={2025},
+    month={July},
+    eprint={2506.14067},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG},
+    url={https://arxiv.org/abs/2506.14067},
+}
+
+@misc{jeong2025selectivecodegenerationfunctional,
+    title={Selective Code Generation for Functional Guarantees},
+    author={Jaewoo Jeong and Taesoo Kim and Sangdon Park},
+    year={2025},
+    month={July},
+    eprint={2505.13553},
+    archivePrefix={arXiv},
+    primaryClass={cs.SE},
+    url={https://arxiv.org/abs/2505.13553},
+}
+
 @InProceedings{wang2025soundboost,
-  title={{SOUNDBOOST: Effective RCA and Attack Detection for UAV via Acoustic Side-Channel}},
-  author={Haoran Wang and Zheng Yang and Sangdon Park and Yibin Yang and Seulbae Kim and Willian Lunardi and Martin Andreoni and Taesoo Kim and Wenke Lee},
-  booktitle={Proceedings of the 55th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)},
-  year={2025}
+    title={{SOUNDBOOST: Effective RCA and Attack Detection for UAV via Acoustic Side-Channel}},
+    author={Haoran Wang and Zheng Yang and Sangdon Park and Yibin Yang and Seulbae Kim and Willian Lunardi and Martin Andreoni and Taesoo Kim and Wenke Lee},
+    booktitle={International Conference on Dependable Systems and Networks},
+    keywords={DSN},
+    year={2025},
+    month={June}
 }
 
 @InProceedings{lee2024selective,
-  title={{Selective Generation for Controllable Language Models}},
-  author={Minjae Lee and Kyungmin Kim and Taesoo Kim and Sangdon Park},
-  booktitle={Neural Information Processing Systems (NeurIPS)},
-  year={2024}
+    title={{Selective Generation for Controllable Language Models}},
+    author={Minjae Lee and Kyungmin Kim and Taesoo Kim and Sangdon Park},
+    booktitle={Neural Information Processing Systems},
+    keywords={NeurIPS},
+    year={2024},
+    month={December},
+    url={https://arxiv.org/abs/2307.09254}
 }
 
 @InProceedings{li2024shuo,
-  title={{TRAQ: Trustworthy Retrieval Augmented Question Answering via Conformal Prediction}},
-  author={Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
-  booktitle={Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)},
-  year={2024}
+    title={{TRAQ: Trustworthy Retrieval Augmented Question Answering via Conformal Prediction}},
+    author={Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
+    booktitle={North American Chapter of the Association for Computational Linguistics},
+    keywords={NAACL},
+    year={2024},
+    month={June},
+    url={https://arxiv.org/abs/2307.04642}
 }
 
 @InProceedings{park2024medbn,
-  title={{MedBN: Robust Test Time Adaptation against Malicious Test Samples}},
-  author={Hyejin Park and Jeongyeon Hwang and Sunung Mun and Sangdon Park and Jungseul Ok},
-  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-  year={2024}
+    title={{MedBN: Robust Test Time Adaptation against Malicious Test Samples}},
+    author={Hyejin Park and Jeongyeon Hwang and Sunung Mun and Sangdon Park and Jungseul Ok},
+    booktitle={Computer Vision and Pattern Recognition},
+    keywords={CVPR},
+    year={2024},
+    month={June},
+    url={https://arxiv.org/abs/2403.19326}
 }
 
 
 @inproceedings{
-si2024pac,
-title={{PAC} Prediction Sets Under Label Shift},
-author={Wenwen Si and Sangdon Park and Insup Lee and Edgar Dobriban and Osbert Bastani},
-booktitle={The Twelfth International Conference on Learning Representations (ICLR)},
-year={2024},
-url={https://openreview.net/forum?id=4vPVBh3fhz}
+    si2024pac,
+    title={{PAC} Prediction Sets Under Label Shift},
+    author={Wenwen Si and Sangdon Park and Insup Lee and Edgar Dobriban and Osbert Bastani},
+    booktitle={International Conference on Learning Representations},
+    keywords={ICLR},
+    year={2024},
+    month={May},
+    url={https://arxiv.org/abs/2310.12964}
 }
 
 @InProceedings{wenwen2023angelic,
-  title={{Angelic Patches for Improving Third-Party Object Detector Performance}},
-  author={Wenwen Si and Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
-  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-  year={2023}
+    title={{Angelic Patches for Improving Third-Party Object Detector Performance}},
+    author={Wenwen Si and Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
+    booktitle={Computer Vision and Pattern Recognition},
+    keywords={CVPR},
+    year={2023},
+    month={December},
+    url={https://ieeexplore.ieee.org/document/10203919}
 }
 
 
 @InProceedings{park2023conformal,
-  title={{{{ACon$^2$}: Adaptive Conformal Consensus  for Provable Blockchain Oracles}}},
-  author={Sangdon Park and Osbert Bastani and Taesoo Kim},
-  url = {https://arxiv.org/abs/2211.09330},
-  howpublishe={\url{https://arxiv.org/abs/2211.09330}},
-  booktitle={Proceedings of the 32nd USENIX Security Symposium (Security)},
-  year={2023}
+    title={{{{ACon$^2$}: Adaptive Conformal Consensus  for Provable Blockchain Oracles}}},
+    author={Sangdon Park and Osbert Bastani and Taesoo Kim},
+    url = {https://arxiv.org/abs/2211.09330},
+    howpublishe={\url{https://arxiv.org/abs/2211.09330}},
+    booktitle={USENIX Security Symposium},
+    keywords={Security},
+    year={2023},
+    month={August},
+    url={https://arxiv.org/abs/2211.09330}
 }
 
 @InProceedings{kaur2023codit,
-  title={{CODiT}: Conformal Out-of-Distribution Detection in Time-Series  Data for Cyber-Physical Systems},
-  author={Ramneet Kaur and Kaustubh Sridhar and Sangdon Park and Yahan Yang and Susmit Jha and Anirban Roy and Oleg Sokolsky and Insup Lee},
-  booktitle={Proceedings of the 14Th ACM/IEEE International Conference on
-Cyber-Physical Systems (ICCPS)},
-  year={2023}
+    title={{CODiT}: Conformal Out-of-Distribution Detection in Time-Series  Data for Cyber-Physical Systems},
+    author={Ramneet Kaur and Kaustubh Sridhar and Sangdon Park and Yahan Yang and Susmit Jha and Anirban Roy and Oleg Sokolsky and Insup Lee},
+    booktitle={International Conference on Cyber-Physical Systems},
+    keywords={ICCPS},
+    year={2023},
+    month={May},
+    url={https://dl.acm.org/doi/10.1145/3576841.3585931}
 }
 
-@article{park2023unsafe,
-  title={{Unsafe’s Betrayal: Abusing Unsafe Rust in Binary Reverse Engineering via Machine Learning}},
-  author={Sangdon Park and Cheng, Xiang and Kim, Taesoo},
-  journal={arXiv preprint arXiv:2211.00111},
-  url = {https://arxiv.org/abs/2211.00111},
-  howpublishe={\url{https://arxiv.org/abs/2211.00111}},
-  year={2023}
+@misc{park2022unsafesbetrayalabusingunsafe,
+      title={Unsafe's Betrayal: Abusing Unsafe Rust in Binary Reverse Engineering via Machine Learning},
+      author={Sangdon Park and Xiang Cheng and Taesoo Kim},
+      year={2022},
+      eprint={2211.00111},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR},
+      url={https://arxiv.org/abs/2211.00111},
 }
 
-@InProceedings{park2022pac,
-  title={{PAC Prediction Sets for Meta-Learning}},
-  author={Park, Sangdon and Dobriban, Edgar and Lee, Insup and Bastani, Osbert},
-  booktitle={Neural Information Processing Systems (NeurIPS)},
-  year={2022}
+@InProceedings{park2022pac-b,
+    title={{PAC Prediction Sets for Meta-Learning}},
+    author={Park, Sangdon and Dobriban, Edgar and Lee, Insup and Bastani, Osbert},
+    booktitle={Neural Information Processing Systems},
+    keywords={NeurIPS},
+    year={2022},
+    month={December},
+    url={https://arxiv.org/abs/2207.02440}
 }
 
 
-@article{li2021pacdettrack,
-  title={Towards {PAC} Multi-Object Detection and Tracking},
-  author={Shuo Li and Sangdon Park and Xiayan Ji  and Insup Lee and Osbert Bastani},
-  journal={arXiv preprint arXiv:2204.07482},
-  year={2022}
+@misc{li2022pacmultiobjectdetectiontracking,
+      title={Towards PAC Multi-Object Detection and Tracking},
+      author={Shuo Li and Sangdon Park and Xiayan Ji and Insup Lee and Osbert Bastani},
+      year={2022},
+      eprint={2204.07482},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2204.07482},
 }
 
 
 @InProceedings{jang2021covshift,
-  title = 	 {Sequential Covariate Shift Detection Using Classifier Two-Sample Tests},
-  author =       {Jang, Sooyong and Park, Sangdon and Lee, Insup and Bastani, Osbert},
-  booktitle = 	 {Proceedings of the 39th International Conference on Machine Learning (ICML)},
-  %pages = 	 {9845--9880},
-  year = 	 {2022},
-  %editor = 	 {Chaudhuri, Kamalika and Jegelka, Stefanie and Song, Le and Szepesvari, Csaba and Niu, Gang and Sabato, Sivan},
-  %volume = 	 {162},
-  %series = 	 {Proceedings of Machine Learning Research},
-  %month = 	 {17--23 Jul},
-  %publisher =    {PMLR},
-  pdf = 	 {https://proceedings.mlr.press/v162/jang22a/jang22a.pdf},
-  url = 	 {https://proceedings.mlr.press/v162/jang22a.html},
-  abstract = 	 {A standard assumption in supervised learning is that the training data and test data are from the same distribution. However, this assumption often fails to hold in practice, which can cause the learned model to perform poorly. We consider the problem of detecting covariate shift, where the covariate distribution shifts but the conditional distribution of labels given covariates remains the same. This problem can naturally be solved using a two-sample test{—}i.e., test whether the current test distribution of covariates equals the training distribution of covariates. Our algorithm builds on classifier tests, which train a discriminator to distinguish train and test covariates, and then use the accuracy of this discriminator as a test statistic. A key challenge is that classifier tests assume given a fixed set of test covariates. In practice, test covariates often arrive sequentially over time{—}e.g., a self-driving car observes a stream of images while driving. Furthermore, covariate shift can occur multiple times{—}i.e., shift and then shift back later or gradually shift over time. To address these challenges, our algorithm trains the discriminator online. Additionally, it evaluates test accuracy using each new covariate before taking a gradient step; this strategy avoids constructing a held-out test set, which can improve sample efficiency. We prove that this optimization preserves the correctness{—}i.e., our algorithm achieves a desired bound on the false positive rate. In our experiments, we show that our algorithm efficiently detects covariate shifts on multiple datasets{—}ImageNet, IWildCam, and Py150.}
+    title = 	 {Sequential Covariate Shift Detection Using Classifier Two-Sample Tests},
+    author =       {Jang, Sooyong and Park, Sangdon and Lee, Insup and Bastani, Osbert},
+    booktitle = 	 {International Conference on Machine Learning},
+    keywords={ICML},
+    year = 	 {2022},
+    month={July},
+    pdf = 	 {https://proceedings.mlr.press/v162/jang22a/jang22a.pdf},
+    url = 	 {https://proceedings.mlr.press/v162/jang22a.html},
+    abstract = 	 {A standard assumption in supervised learning is that the training data and test data are from the same distribution. However, this assumption often fails to hold in practice, which can cause the learned model to perform poorly. We consider the problem of detecting covariate shift, where the covariate distribution shifts but the conditional distribution of labels given covariates remains the same. This problem can naturally be solved using a two-sample test{—}i.e., test whether the current test distribution of covariates equals the training distribution of covariates. Our algorithm builds on classifier tests, which train a discriminator to distinguish train and test covariates, and then use the accuracy of this discriminator as a test statistic. A key challenge is that classifier tests assume given a fixed set of test covariates. In practice, test covariates often arrive sequentially over time{—}e.g., a self-driving car observes a stream of images while driving. Furthermore, covariate shift can occur multiple times{—}i.e., shift and then shift back later or gradually shift over time. To address these challenges, our algorithm trains the discriminator online. Additionally, it evaluates test accuracy using each new covariate before taking a gradient step; this strategy avoids constructing a held-out test set, which can improve sample efficiency. We prove that this optimization preserves the correctness{—}i.e., our algorithm achieves a desired bound on the false positive rate. In our experiments, we show that our algorithm efficiently detects covariate shifts on multiple datasets{—}ImageNet, IWildCam, and Py150.}
 }
 
 @inproceedings{
-park2022pac,
-title={{PAC} Prediction Sets Under Covariate Shift},
-author={Sangdon Park and Edgar Dobriban and Insup Lee and Osbert Bastani},
-booktitle={International Conference on Learning Representations (ICLR)} ,
-year={2022},
-url={https://openreview.net/forum?id=DhP9L8vIyLc}
-}
-
-% @article{zhang2021robust,
-%   title={Robust Deep Learning via Robust Representation Design},
-%   author={Jian Zhang and Shuo Li and Park, Sangdon and Lee, Insup and Osbert Bastani},
-%   journal={In submission},
-%   year={2021}
-% }
-
-@inproceedings{
-Kaur2021idecode,
-title={{iDECODe}: In-distribution Equivariance for Conformal Out-of-distribution Detection},
-author={
-Ramneet Kaur and Susmit Jha and Anirban Roy and Sangdon Park and Edgar Dobriban and Oleg Sokolsky and Insup Lee},
-booktitle={Association for the Advancement of Artificial Intelligence (AAAI)},
-year={2021},
+    park2022pac,
+    title={{PAC} Prediction Sets Under Covariate Shift},
+    author={Sangdon Park and Edgar Dobriban and Insup Lee and Osbert Bastani},
+    booktitle={International Conference on Learning Representations},
+    year={2022},
+    month={April},
+    keywords={ICLR},
+    url={https://arxiv.org/abs/2106.09848}
 }
 
 @inproceedings{
-park2021pac,
-title={{PAC} Confidence Predictions for Deep Neural Network Classifiers},
-author={Sangdon Park and Shuo Li and Insup Lee and Osbert Bastani},
-booktitle={International Conference on Learning Representations (ICLR)},
-year={2021},
-url={https://openreview.net/forum?id=Qk-Wq5AIjpq}
-}
-
-@inproceedings{park2020calibrated,
-  title={Calibrated prediction with covariate shift via unsupervised domain adaptation},
-  author={Park, Sangdon and Bastani, Osbert and Weimer, James and Lee, Insup},
-  booktitle={International Conference on Artificial Intelligence and Statistics (AISTATS)},
-  %pages={3219--3229},
-  year={2020},
-  %organization={PMLR}
+    Kaur2021idecode,
+    title={{iDECODe}: In-distribution Equivariance for Conformal Out-of-distribution Detection},
+    author={
+    Ramneet Kaur and Susmit Jha and Anirban Roy and Sangdon Park and Edgar Dobriban and Oleg Sokolsky and Insup Lee},
+    booktitle={Association for the Advancement of Artificial Intelligence},
+    keywords={AAAI},
+    year={2021},
+    month={February},
+    url={https://arxiv.org/abs/2201.02331}
 }
 
 @inproceedings{
-Park2020PAC,
-title={{PAC} Confidence Sets for Deep Neural Networks via Calibrated Prediction},
-author={Sangdon Park and Osbert Bastani and Nikolai Matni and Insup Lee},
-booktitle={International Conference on Learning Representations (ICLR)},
-year={2020},
-url={https://openreview.net/forum?id=BJxVI04YvB}
+    park2021pac,
+    title={{PAC} Confidence Predictions for Deep Neural Network Classifiers},
+    author={Sangdon Park and Shuo Li and Insup Lee and Osbert Bastani},
+    booktitle={International Conference on Learning Representations},
+    keywords={ICLR},
+    year={2021},
+    month={May},
+    url={https://arxiv.org/abs/2011.00716}
+}
+
+@inproceedings{
+    park2020calibrated,
+    title={Calibrated prediction with covariate shift via unsupervised domain adaptation},
+    author={Sangdon Park and Osbert Bastani and James Weimer and Insup Lee},
+    booktitle={International Conference on Artificial Intelligence and Statistics},
+    keywords={AISTATS},
+    year={2020},
+    month={August},
+    url={https://arxiv.org/abs/2003.00343}
+}
+
+@inproceedings{
+    Park2020PAC,
+    title={{PAC} Confidence Sets for Deep Neural Networks via Calibrated Prediction},
+    author={Sangdon Park and Osbert Bastani and Nikolai Matni and Insup Lee},
+    booktitle={International Conference on Learning Representations},
+    keywords={ICLR},
+    year={2020},
+    month={April},
+    url={https://arxiv.org/abs/2001.00106}
 }
 
 
-@article{park2018from,
-  title={From Verification to Learning for Defense against Adversarial Examples in Neural Networks},
-  author={Park, Sangdon and Ivanov, Radoslav and Weimer, James and Lee, Insup},
-  journal={Korea Cyber-security Competition},
-  year={2018}
+%@article{park2018from,
+%    title={From Verification to Learning for Defense against Adversarial Examples in Neural Networks},
+%    author={Park, Sangdon and Ivanov, Radoslav and Weimer, James and Lee, Insup},
+%    journal={Korea Cyber-security Competition},
+%    year={2018}
+%}
+
+@inproceedings{
+    park2017resilient,
+    title={Resilient linear classification: an approach to deal with attacks on training data},
+    author={Park, Sangdon and Weimer, James and Lee, Insup},
+    booktitle={International Conference on Cyber-Physical Systems},
+    keywords={ICCPS},
+    year={2017},
+    month={April},
+    url={https://arxiv.org/abs/1708.03366v2}
 }
 
-@inproceedings{park2017resilient,
-  title={Resilient linear classification: an approach to deal with attacks on training data},
-  author={Park, Sangdon and Weimer, James and Lee, Insup},
-  booktitle={International Conference on Cyber-Physical Systems (ICCPS)},
-  %pages={155--164},
-  year={2017}
-}
-
-@inproceedings{oh2016integrated,
-  title={Integrated intelligence for human-robot teams},
-  author={Oh, Jean and Howard, Thomas M and Walter, Matthew R and Barber, Daniel and Zhu, Menglong and Park, Sangdon and Suppe, Arne and Navarro-Serment, Luis and Duvallet, Felix and Boularias, Abdeslam and others},
-  booktitle={International Symposium on Experimental Robotics (ISER)},
-  %pages={309--322},
-  year={2016},
-  %organization={Springer}
+@inproceedings{
+    oh2016integrated,
+    title={Integrated intelligence for human-robot teams},
+    author={Oh, Jean and Howard, Thomas M and Walter, Matthew R and Barber, Daniel and Zhu, Menglong and Park, Sangdon and Suppe, Arne and Navarro-Serment, Luis and Duvallet, Felix and Boularias, Abdeslam and others},
+    booktitle={International Symposium on Experimental Robotics},
+    keywords={ISER},
+    year={2016},
+    month={October},
+    url={https://link.springer.com/chapter/10.1007/978-3-319-50115-4_28}
 }
 
 @inproceedings{park2012abnormal,
-  title={Abnormal object detection by canonical scene-based contextual model},
-  author={Park, Sangdon and Kim, Wonsik and Lee, Kyoung Mu},
-  booktitle={European Conference on Computer Vision (\textbf{ECCV})},
-  %pages={651--664},
-  year={2012},
-  %organization={Springer}
+    title={Abnormal object detection by canonical scene-based contextual model},
+    author={Park, Sangdon and Kim, Wonsik and Lee, Kyoung Mu},
+    booktitle={European Conference on Computer Vision},
+    keywords={ECCV},
+    year={2012},
+    month={October},
+    url={https://link.springer.com/chapter/10.1007/978-3-642-33712-3_47}
 }
