--- a/content/publication/kaur-2021-idecode/cite.bib
+++ b/content/publication/kaur-2021-idecode/cite.bib
@@ -1,8 +1,10 @@
 @inproceedings{Kaur2021idecode,
  author = {
 Ramneet Kaur and Susmit Jha and Anirban Roy and Sangdon Park and Edgar Dobriban and Oleg Sokolsky and Insup Lee},
- booktitle = {Association for the Advancement of Artificial Intelligence (AAAI)},
+ booktitle = {Association for the Advancement of Artificial Intelligence},
+ keywords = {AAAI},
+ month = {February},
  title = {iDECODe: In-distribution Equivariance for Conformal Out-of-distribution Detection},
+ url = {https://arxiv.org/abs/2201.02331},
  year = {2021}
 }
-
