--- a/content/publication/li-2024-shuo/cite.bib
+++ b/content/publication/li-2024-shuo/cite.bib
@@ -1,7 +1,9 @@
 @inproceedings{li2024shuo,
  author = {Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
- booktitle = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)},
+ booktitle = {North American Chapter of the Association for Computational Linguistics},
+ keywords = {NAACL},
+ month = {June},
  title = {TRAQ: Trustworthy Retrieval Augmented Question Answering via Conformal Prediction},
+ url = {https://arxiv.org/abs/2307.04642},
  year = {2024}
 }
-
