--- a/content/publication/park-2021-pac/cite.bib
+++ b/content/publication/park-2021-pac/cite.bib
@@ -1,8 +1,9 @@
 @inproceedings{park2021pac,
  author = {Sangdon Park and Shuo Li and Insup Lee and Osbert Bastani},
- booktitle = {International Conference on Learning Representations (ICLR)},
+ booktitle = {International Conference on Learning Representations},
+ keywords = {ICLR},
+ month = {May},
  title = {PAC Confidence Predictions for Deep Neural Network Classifiers},
- url = {https://openreview.net/forum?id=Qk-Wq5AIjpq},
+ url = {https://arxiv.org/abs/2011.00716},
  year = {2021}
 }
-
