--- a/content/publication/park-2022-pac/cite.bib
+++ b/content/publication/park-2022-pac/cite.bib
@@ -1,8 +1,9 @@
 @inproceedings{park2022pac,
  author = {Sangdon Park and Edgar Dobriban and Insup Lee and Osbert Bastani},
- booktitle = {International Conference on Learning Representations (ICLR)},
+ booktitle = {International Conference on Learning Representations},
+ keywords = {ICLR},
+ month = {April},
  title = {PAC Prediction Sets Under Covariate Shift},
- url = {https://openreview.net/forum?id=DhP9L8vIyLc},
+ url = {https://arxiv.org/abs/2106.09848},
  year = {2022}
 }
-
