--- a/content/publication/park-2023-conformal/cite.bib
+++ b/content/publication/park-2023-conformal/cite.bib
@@ -1,9 +1,10 @@
 @inproceedings{park2023conformal,
  author = {Sangdon Park and Osbert Bastani and Taesoo Kim},
- booktitle = {Proceedings of the 32nd USENIX Security Symposium (Security)},
+ booktitle = {USENIX Security Symposium},
  howpublishe = {r̆lhttps://arxiv.org/abs/2211.09330},
+ keywords = {Security},
+ month = {August},
  title = {ACon$^2$: Adaptive Conformal Consensus  for Provable Blockchain Oracles},
  url = {https://arxiv.org/abs/2211.09330},
  year = {2023}
 }
-
