--- a/content/publication/park-2024-medbn/cite.bib
+++ b/content/publication/park-2024-medbn/cite.bib
@@ -1,7 +1,9 @@
 @inproceedings{park2024medbn,
  author = {Hyejin Park and Jeongyeon Hwang and Sunung Mun and Sangdon Park and Jungseul Ok},
- booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+ booktitle = {Computer Vision and Pattern Recognition},
+ keywords = {CVPR},
+ month = {June},
  title = {MedBN: Robust Test Time Adaptation against Malicious Test Samples},
+ url = {https://arxiv.org/abs/2403.19326},
  year = {2024}
 }
-
