--- a/content/publication/si-2024-pac/cite.bib
+++ b/content/publication/si-2024-pac/cite.bib
@@ -1,8 +1,9 @@
 @inproceedings{si2024pac,
  author = {Wenwen Si and Sangdon Park and Insup Lee and Edgar Dobriban and Osbert Bastani},
- booktitle = {The Twelfth International Conference on Learning Representations (ICLR)},
+ booktitle = {International Conference on Learning Representations},
+ keywords = {ICLR},
+ month = {May},
  title = {PAC Prediction Sets Under Label Shift},
- url = {https://openreview.net/forum?id=4vPVBh3fhz},
+ url = {https://arxiv.org/abs/2310.12964},
  year = {2024}
 }
-
