--- a/content/publication/wenwen-2023-angelic/cite.bib
+++ b/content/publication/wenwen-2023-angelic/cite.bib
@@ -1,7 +1,9 @@
 @inproceedings{wenwen2023angelic,
  author = {Wenwen Si and Shuo Li and Sangdon Park and Insup Lee and Osbert Bastani},
- booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+ booktitle = {Computer Vision and Pattern Recognition},
+ keywords = {CVPR},
+ month = {December},
  title = {Angelic Patches for Improving Third-Party Object Detector Performance},
+ url = {https://ieeexplore.ieee.org/document/10203919},
  year = {2023}
 }
-
