--- a/content/publication/kaur-2023-codit/cite.bib
+++ b/content/publication/kaur-2023-codit/cite.bib
@@ -1,8 +1,9 @@
 @inproceedings{kaur2023codit,
  author = {Ramneet Kaur and Kaustubh Sridhar and Sangdon Park and Yahan Yang and Susmit Jha and Anirban Roy and Oleg Sokolsky and Insup Lee},
- booktitle = {Proceedings of the 14Th ACM/IEEE International Conference on
-Cyber-Physical Systems (ICCPS)},
+ booktitle = {International Conference on Cyber-Physical Systems},
+ keywords = {ICCPS},
+ month = {May},
  title = {CODiT: Conformal Out-of-Distribution Detection in Time-Series  Data for Cyber-Physical Systems},
+ url = {https://dl.acm.org/doi/10.1145/3576841.3585931},
  year = {2023}
 }
-
