--- a/content/publication/lee-2024-selective/cite.bib
+++ b/content/publication/lee-2024-selective/cite.bib
@@ -1,7 +1,9 @@
 @inproceedings{lee2024selective,
  author = {Minjae Lee and Kyungmin Kim and Taesoo Kim and Sangdon Park},
- booktitle = {Neural Information Processing Systems (NeurIPS)},
+ booktitle = {Neural Information Processing Systems},
+ keywords = {NeurIPS},
+ month = {December},
  title = {Selective Generation for Controllable Language Models},
+ url = {https://arxiv.org/abs/2307.09254},
  year = {2024}
 }
-
