--- a/content/publication/park-2020-pac/cite.bib
+++ b/content/publication/park-2020-pac/cite.bib
@@ -1,8 +1,9 @@
 @inproceedings{Park2020PAC,
  author = {Sangdon Park and Osbert Bastani and Nikolai Matni and Insup Lee},
- booktitle = {International Conference on Learning Representations (ICLR)},
+ booktitle = {International Conference on Learning Representations},
+ keywords = {ICLR},
+ month = {April},
  title = {PAC Confidence Sets for Deep Neural Networks via Calibrated Prediction},
- url = {https://openreview.net/forum?id=BJxVI04YvB},
+ url = {https://arxiv.org/abs/2001.00106},
  year = {2020}
 }
-
