--- a/content/publication/wang-2025-soundboost/cite.bib
+++ b/content/publication/wang-2025-soundboost/cite.bib
@@ -1,7 +1,8 @@
 @inproceedings{wang2025soundboost,
  author = {Haoran Wang and Zheng Yang and Sangdon Park and Yibin Yang and Seulbae Kim and Willian Lunardi and Martin Andreoni and Taesoo Kim and Wenke Lee},
- booktitle = {Proceedings of the 55th Annual IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)},
+ booktitle = {International Conference on Dependable Systems and Networks},
+ keywords = {DSN},
+ month = {June},
  title = {SOUNDBOOST: Effective RCA and Attack Detection for UAV via Acoustic Side-Channel},
  year = {2025}
 }
-
