--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -1,3 +1,13 @@
+@inproceedings{
+    kim2025chronobias,
+    title={ChronoBias: A Benchmark for Evaluating Temporal Group Bias in Retrieval-augmented Language Models},
+    author={Kyungmin Kim and Youngbin Choi and Hyounghun Kim and Dongwoo Kim and Sangdon Park},
+    booktitle={The 2025 Conference on Empirical Methods in Natural Language Processing},
+    keywords = {EMNLP Findings},
+    year={2025},
+    url={https://openreview.net/forum?id=7vuMXtHBkB}
+}
+
 @InProceedings{moon2025holisticunlearningbenchmarkmultifaceted,
     title={Holistic Unlearning Benchmark: A Multi-Faceted Evaluation for Text-to-Image Diffusion Model Unlearning},
     author={Saemi Moon and Minjong Lee and Sangdon Park and Dongwoo Kim},
