--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -8,6 +8,16 @@
     url={https://openreview.net/forum?id=7vuMXtHBkB}
 }
 
+@inproceedings{
+    hwang2025retrievalaugmented,
+    title={Retrieval-Augmented Generation with Estimation of Source Reliability},
+    author={Jeongyeon Hwang and Junyoung Park and Hyejin Park and Dongwoo Kim and Sangdon Park and Jungseul Ok},
+    booktitle={The 2025 Conference on Empirical Methods in Natural Language Processing},
+    keywords = {EMNLP},
+    year={2025},
+    url={https://openreview.net/forum?id=SwfymlaTn3}
+}
+
 @InProceedings{moon2025holisticunlearningbenchmarkmultifaceted,
     title={Holistic Unlearning Benchmark: A Multi-Faceted Evaluation for Text-to-Image Diffusion Model Unlearning},
     author={Saemi Moon and Minjong Lee and Sangdon Park and Dongwoo Kim},
