--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -2,7 +2,7 @@
     kim2025chronobias,
     title={ChronoBias: A Benchmark for Evaluating Temporal Group Bias in Retrieval-augmented Language Models},
     author={Kyungmin Kim and Youngbin Choi and Hyounghun Kim and Dongwoo Kim and Sangdon Park},
-    booktitle={The 2025 Conference on Empirical Methods in Natural Language Processing},
+    booktitle={Empirical Methods in Natural Language Processing},
     keywords = {EMNLP Findings},
     year={2025},
     url={https://openreview.net/forum?id=7vuMXtHBkB}
@@ -12,7 +12,7 @@
     hwang2025retrievalaugmented,
     title={Retrieval-Augmented Generation with Estimation of Source Reliability},
     author={Jeongyeon Hwang and Junyoung Park and Hyejin Park and Dongwoo Kim and Sangdon Park and Jungseul Ok},
-    booktitle={The 2025 Conference on Empirical Methods in Natural Language Processing},
+    booktitle={Empirical Methods in Natural Language Processing},
     keywords = {EMNLP},
     year={2025},
     url={https://openreview.net/forum?id=SwfymlaTn3}
