--- a/content/publication/kim-2025-chronobias/cite.bib
+++ b/content/publication/kim-2025-chronobias/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{kim2025chronobias,
  author = {Kyungmin Kim and Youngbin Choi and Hyounghun Kim and Dongwoo Kim and Sangdon Park},
- booktitle = {The 2025 Conference on Empirical Methods in Natural Language Processing},
+ booktitle = {Empirical Methods in Natural Language Processing},
  keywords = {EMNLP Findings},
  title = {ChronoBias: A Benchmark for Evaluating Temporal Group Bias in Retrieval-augmented Language Models},
  url = {https://openreview.net/forum?id=7vuMXtHBkB},
