--- a/content/publication/hwang-2025-retrievalaugmented/cite.bib
+++ b/content/publication/hwang-2025-retrievalaugmented/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{hwang2025retrievalaugmented,
  author = {Jeongyeon Hwang and Junyoung Park and Hyejin Park and Dongwoo Kim and Sangdon Park and Jungseul Ok},
- booktitle = {The 2025 Conference on Empirical Methods in Natural Language Processing},
+ booktitle = {Empirical Methods in Natural Language Processing},
  keywords = {EMNLP},
  title = {Retrieval-Augmented Generation with Estimation of Source Reliability},
  url = {https://openreview.net/forum?id=SwfymlaTn3},
