--- a/content/publication/wang-2025-soundboost/cite.bib
+++ b/content/publication/wang-2025-soundboost/cite.bib
@@ -4,5 +4,6 @@
  keywords = {DSN},
  month = {June},
  title = {SOUNDBOOST: Effective RCA and Attack Detection for UAV via Acoustic Side-Channel},
+ url = {https://ieeexplore.ieee.org/document/11068853},
  year = {2025}
 }
