--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -1,3 +1,13 @@
+@misc{kim2025atlantisaidriventhreatlocalization,
+      title={ATLANTIS: AI-driven Threat Localization, Analysis, and Triage Intelligence System},
+      author={Taesoo Kim and HyungSeok Han and Soyeon Park and Dae R. Jeong and Dohyeok Kim and Dongkwan Kim and Eunsoo Kim and Jiho Kim and Joshua Wang and Kangsu Kim and Sangwoo Ji and Woosun Song and Hanqing Zhao and Andrew Chin and Gyejin Lee and Kevin Stevens and Mansour Alharthi and Yizhuo Zhai and Cen Zhang and Joonun Jang and Yeongjin Jang and Ammar Askar and Dongju Kim and Fabian Fleischer and Jeongin Cho and Junsik Kim and Kyungjoon Ko and Insu Yun and Sangdon Park and Dowoo Baik and Haein Lee and Hyeon Heo and Minjae Gwon and Minjae Lee and Minwoo Baek and Seunggi Min and Wonyoung Kim and Yonghwi Jin and Younggi Park and Yunjae Choi and Jinho Jung and Gwanhyun Lee and Junyoung Jang and Kyuheon Kim and Yeonghyeon Cha and Youngjoon Kim},
+      year={2025},
+      eprint={2509.14589},
+      archivePrefix={arXiv},
+      primaryClass={cs.CR},
+      url={https://arxiv.org/abs/2509.14589},
+}
+
 @inproceedings{
     kim2025chronobias,
     title={ChronoBias: A Benchmark for Evaluating Temporal Group Bias in Retrieval-augmented Language Models},
@@ -58,7 +68,8 @@
     booktitle={International Conference on Dependable Systems and Networks},
     keywords={DSN},
     year={2025},
-    month={June}
+    month={June},
+    url={https://ieeexplore.ieee.org/document/11068853},
 }
 
 @InProceedings{lee2024selective,
