--- a/content/authors/Sangdon Park/papers.bib
+++ b/content/authors/Sangdon Park/papers.bib
@@ -39,16 +39,15 @@
     url={https://arxiv.org/abs/2410.05664},
 }
 
-
-@misc{lee2025regretperspectiveonlineselective,
-    title={A Regret Perspective on Online Selective Generation},
-    author={Minjae Lee and Yoonjae Jung and Sangdon Park},
-    year={2025},
-    month={July},
-    eprint={2506.14067},
-    archivePrefix={arXiv},
-    primaryClass={cs.LG},
-    url={https://arxiv.org/abs/2506.14067},
+@misc{lee2025onlineselectivegenerationadversarial,
+      title={Online Selective Generation with Adversarial Bandit Feedback},
+      author={Minjae Lee and Yoonjae Jung and Sangdon Park},
+      year={2025},
+      month={July},
+      eprint={2506.14067},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2506.14067},
 }
 
 @misc{jeong2025selectivecodegenerationfunctional,
