--- a/content/publication/lee-2025-onlineselectivegenerationadversarial/cite.bib
+++ b/content/publication/lee-2025-onlineselectivegenerationadversarial/cite.bib
@@ -1,10 +1,10 @@
-@misc{lee2025regretperspectiveonlineselective,
+@misc{lee2025onlineselectivegenerationadversarial,
  archiveprefix = {arXiv},
  author = {Minjae Lee and Yoonjae Jung and Sangdon Park},
  eprint = {2506.14067},
  month = {July},
  primaryclass = {cs.LG},
- title = {A Regret Perspective on Online Selective Generation},
+ title = {Online Selective Generation with Adversarial Bandit Feedback},
  url = {https://arxiv.org/abs/2506.14067},
  year = {2025}
 }
